--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Cadastro</title>
+    
+    <link rel="shortcut icon" type="image/svg+xml" href="/src/assets/favicon.svg">
+    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,900;1,100;1,900&display=swap" rel="stylesheet">
     <style>
          @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,800;0,900;1,100;1,800;1,900&display=swap');
@@ -89,37 +93,9 @@ input{
 }
 @media screen and (max-width: 650px) {
   .container {
-    width: 90vw;
+    width: 80vw;
   }
-  .form{
-    width: 100%;
-    font-size: 1.6rem;
-  }
-  input {
-    width: 100%;
-    font-size: 1.6rem;
-  }
-  
-  h1 {
-    font-size: 1.5rem;
-  }
-  #alter {
-    font-size: 1.6rem;
-  }
-  .btn{
-    font-size: 1.6rem;
-    width: 100%;
-  }
-  .note{
-    width: 100%;
-    padding: 0;
-  }
-  ul.note li{
-    width:100%;
-    padding: 0;
-    margin: 10px;
-    font-size: 1.3rem;
-  }
+ 
 }
 
 
