--- a/views/home.ejs
+++ b/views/home.ejs
@@ -161,13 +161,14 @@
             align-items: center;
             justify-content: center;
             padding: 0;
+            margin:0.7rem;
         }
 
         .delete {
-            transform: translateY(-20%);
+            transform: translateY(-50%);
             border-radius: 0 0 0.5rem 0.5rem;
             text-align: center;
-            border-left: 1px solid fff;
+            border-left: 2px solid fff;
         }
 
 
@@ -176,18 +177,30 @@
                 padding: 0;
                 margin: 0;
             }
+            body{
+                height: 100vh;
+                scroll-padding-bottom: 80px;
+                scroll-behavior: smooth;
+            }
             .conteiner-card{
                 width:90vw;
                 display:flex;
                 flex-direction:row;
                 gap:0;
+                align-items: stretch;
+                margin: 0.5rem 0;
             }
             .card{
-                display: block;
-                width:80vw;
+                display: flex;
+                flex-direction: column;
+                width:75vw;
                 height: auto;
-                margin:1rem 0;
-                padding: 0.5rem;
+                padding: 1rem 0.5rem;
+                border-radius: 1rem 0 0 1rem;
+                margin:0;
+                justify-content: center;
+                align-items: center;
+                gap: 0.3rem;
             }
             .card h3, .card p{
                 width:100%;
@@ -195,10 +208,31 @@
             }
             .delete{
                 margin:0;
-                display: block;
-                width:10vw;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width:15vw;
                 border-radius: 0;
                 padding: 0.1rem;
+                transform: translateY(0);
+                border-top: 2px solid #fff;
+            }
+            .title{
+                margin: 0;
+            }
+            .form{
+                position:fixed;
+                bottom: 0;
+                left: 0;
+                z-index: 999;
+                background-color: #000;
+                width: 100vw;
+                height: 60px;
+                margin: 0;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
             }
 
         }
@@ -245,6 +279,7 @@
 
 
     </div>
+    <br><br><br>
     <a href="/auth/logout" id="logout">Sair</a>
 </body>
 
